--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,46 @@
 Package: ShinyDSP
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: A Shiny App For Visualizing Nanostring GeoMx DSP Data
+Version: 0.99.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    person("Seung", "Kim", , "seung.kim@lhsc.on.ca", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-5263-0758"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
+Imports: 
+    BiocGenerics,
+    bsicons,
+    bslib,
+    cowplot,
+    dplyr,
+    DT,
+    edgeR,
+    fontawesome,
+    ggplot2,
+    ggrepel,
+    grDevices,
+    grid,
+    htmltools,
+    limma,
+    readxl,
+    scales,
+    scater,
+    shiny,
+    shinycssloaders,
+    shinyjs,
+    shinyWidgets,
+    SingleCellExperiment,
+    standR,
+    stats,
+    SummarizedExperiment,
+    tibble,
+    utils,
+    withr
+biocViews: DifferentialExpression, GeneExpression, ShinyApps, Spatial, Transcriptomics
+URL: https://kimsjune.github.com/ShinyDSP
+BugReports: https://kimsjune.github.com/ShinyDSP/issues
+Suggests: 
+    spelling
+Language: en-US
