Working state save

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(htmltools,div)
 importFrom(limma,contrasts.fit)
 importFrom(limma,duplicateCorrelation)
 importFrom(limma,eBayes)
+importFrom(limma,is.fullrank)
 importFrom(limma,lmFit)
 importFrom(limma,makeContrasts)
 importFrom(limma,topTable)
