Implemented heatmap. Column labels and split by group not working yet.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,16 @@
 export(shinyDSP)
 importFrom(AnnotationHub,query)
 importFrom(BiocGenerics,as.list)
+importFrom(ComplexHeatmap,Heatmap)
+importFrom(ComplexHeatmap,HeatmapAnnotation)
+importFrom(ComplexHeatmap,anno_block)
 importFrom(DT,datatable)
 importFrom(DT,formatSignif)
 importFrom(DT,renderDT)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(S4Vectors,metadata)
 importFrom(SingleCellExperiment,reducedDim)
+importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,colData)
 importFrom(bsicons,bs_icon)
 importFrom(bslib,accordion)
@@ -19,10 +23,12 @@ importFrom(bslib,nav_panel)
 importFrom(bslib,page_fillable)
 importFrom(bslib,page_navbar)
 importFrom(bslib,sidebar)
+importFrom(circlize,colorRamp2)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,save_plot)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,slice_head)
 importFrom(edgeR,SE2DGEList)
 importFrom(edgeR,estimateDisp)
 importFrom(edgeR,filterByExpr)
@@ -47,6 +53,7 @@ importFrom(ggplot2,ylim)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
+importFrom(grid,gpar)
 importFrom(grid,unit)
 importFrom(htmltools,div)
 importFrom(limma,contrasts.fit)
