--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,9 @@ importFrom(bslib,accordion)
 importFrom(bslib,accordion_panel)
 importFrom(bslib,layout_columns)
 importFrom(bslib,layout_sidebar)
+importFrom(bslib,nav_hide)
 importFrom(bslib,nav_panel)
+importFrom(bslib,nav_show)
 importFrom(bslib,page_fillable)
 importFrom(bslib,page_navbar)
 importFrom(bslib,sidebar)
@@ -50,6 +52,8 @@ importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
 importFrom(ggplot2,ylim)
+importFrom(ggpubr,as_ggplot)
+importFrom(ggpubr,get_legend)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
