--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_head)
+importFrom(dplyr,where)
 importFrom(edgeR,SE2DGEList)
 importFrom(edgeR,estimateDisp)
 importFrom(edgeR,filterByExpr)
@@ -86,6 +87,7 @@ importFrom(shiny,downloadHandler)
 importFrom(shiny,eventReactive)
 importFrom(shiny,fluidRow)
 importFrom(shiny,icon)
+importFrom(shiny,numericInput)
 importFrom(shiny,observeEvent)
 importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
@@ -96,7 +98,10 @@ importFrom(shiny,renderUI)
 importFrom(shiny,runApp)
 importFrom(shiny,selectInput)
 importFrom(shiny,sliderInput)
+importFrom(shiny,tabPanel)
+importFrom(shiny,tabsetPanel)
 importFrom(shiny,tags)
+importFrom(shiny,textInput)
 importFrom(shiny,uiOutput)
 importFrom(shinyWidgets,radioGroupButtons)
 importFrom(shinycssloaders,withSpinner)
@@ -114,5 +119,7 @@ importFrom(tibble,num)
 importFrom(tibble,rownames_to_column)
 importFrom(utils,combn)
 importFrom(utils,de)
+importFrom(utils,globalVariables)
+importFrom(utils,write.csv)
 importFrom(utils,write.table)
 importFrom(withr,with_options)
