Saved reactive statements into reactiveValues() pt 2. Consolidated R scripts and make it more tidy.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,11 @@ importFrom(bslib,css)
 importFrom(bslib,layout_columns)
 importFrom(bslib,layout_sidebar)
 importFrom(bslib,nav_hide)
+importFrom(bslib,nav_item)
+importFrom(bslib,nav_menu)
 importFrom(bslib,nav_panel)
 importFrom(bslib,nav_show)
+importFrom(bslib,nav_spacer)
 importFrom(bslib,page_fillable)
 importFrom(bslib,page_navbar)
 importFrom(bslib,sidebar)
@@ -102,6 +105,7 @@ importFrom(shiny,tabPanel)
 importFrom(shiny,tabsetPanel)
 importFrom(shiny,tags)
 importFrom(shiny,textInput)
+importFrom(shiny,textOutput)
 importFrom(shiny,uiOutput)
 importFrom(shinyWidgets,radioGroupButtons)
 importFrom(shinycssloaders,withSpinner)
