Added logic for heatmaps, but there are inaccuracies...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(cowplot,plot_grid)
 importFrom(cowplot,save_plot)
 importFrom(dplyr,across)
 importFrom(dplyr,case_when)
+importFrom(dplyr,ensym)
 importFrom(dplyr,filter)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
@@ -119,6 +120,7 @@ importFrom(standR,geomxBatchCorrection)
 importFrom(standR,geomxNorm)
 importFrom(standR,readGeoMx)
 importFrom(stats,model.matrix)
+importFrom(stringr,str_split_1)
 importFrom(tibble,num)
 importFrom(tibble,rownames_to_column)
 importFrom(utils,combn)
