--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(grid,gpar)
 importFrom(grid,unit)
 importFrom(htmltools,div)
 importFrom(htmltools,h4)
+importFrom(htmltools,tagList)
 importFrom(limma,contrasts.fit)
 importFrom(limma,duplicateCorrelation)
 importFrom(limma,eBayes)
@@ -80,6 +81,9 @@ importFrom(limma,makeContrasts)
 importFrom(limma,topTable)
 importFrom(limma,voom)
 importFrom(magrittr,"%>%")
+importFrom(pals,alphabet)
+importFrom(pals,alphabet2)
+importFrom(pals,glasbey)
 importFrom(readr,read_delim)
 importFrom(readxl,read_excel)
 importFrom(scales,number_format)
@@ -120,6 +124,7 @@ importFrom(standR,geomxBatchCorrection)
 importFrom(standR,geomxNorm)
 importFrom(standR,readGeoMx)
 importFrom(stats,model.matrix)
+importFrom(stats,setNames)
 importFrom(stringr,str_split_1)
 importFrom(tibble,num)
 importFrom(tibble,rownames_to_column)
