Fixed PCA plots. Removed redundant validation messages.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(pals,glasbey)
 importFrom(readr,read_delim)
 importFrom(readxl,read_excel)
 importFrom(scales,number_format)
+importFrom(scales,scientific)
 importFrom(scater,runPCA)
 importFrom(shiny,addResourcePath)
 importFrom(shiny,column)
