--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,12 +65,15 @@ importFrom(ggplot2,ylim)
 importFrom(ggpubr,as_ggplot)
 importFrom(ggpubr,get_legend)
 importFrom(ggrepel,geom_text_repel)
+importFrom(grDevices,colors)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(grid,gpar)
 importFrom(grid,unit)
+importFrom(htmltools,HTML)
 importFrom(htmltools,div)
 importFrom(htmltools,h4)
+importFrom(htmltools,span)
 importFrom(htmltools,tagList)
 importFrom(limma,contrasts.fit)
 importFrom(limma,duplicateCorrelation)
@@ -83,9 +86,10 @@ importFrom(limma,voom)
 importFrom(magrittr,"%>%")
 importFrom(pals,alphabet)
 importFrom(pals,alphabet2)
+importFrom(pals,cols25)
 importFrom(pals,glasbey)
+importFrom(pals,watlington)
 importFrom(readr,read_delim)
-importFrom(readxl,read_excel)
 importFrom(scales,number_format)
 importFrom(scales,scientific)
 importFrom(scater,runPCA)
@@ -97,6 +101,7 @@ importFrom(shiny,eventReactive)
 importFrom(shiny,fluidRow)
 importFrom(shiny,icon)
 importFrom(shiny,numericInput)
+importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
 importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
@@ -120,11 +125,15 @@ importFrom(shinyjs,hide)
 importFrom(shinyjs,show)
 importFrom(shinyjs,toggle)
 importFrom(shinyjs,useShinyjs)
+importFrom(shinyvalidate,InputValidator)
+importFrom(shinyvalidate,sv_in_set)
+importFrom(shinyvalidate,sv_required)
 importFrom(standR,findNCGs)
 importFrom(standR,geomxBatchCorrection)
 importFrom(standR,geomxNorm)
 importFrom(standR,readGeoMx)
 importFrom(stats,model.matrix)
+importFrom(stats,quantile)
 importFrom(stats,setNames)
 importFrom(stringr,str_split_1)
 importFrom(tibble,num)
@@ -132,6 +141,8 @@ importFrom(tibble,rownames_to_column)
 importFrom(utils,combn)
 importFrom(utils,de)
 importFrom(utils,globalVariables)
+importFrom(utils,packageDescription)
+importFrom(utils,tail)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
 importFrom(withr,with_options)
