--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 .Rproj.user
 .Rhistory
+*.Rproj
 .Rdata
 .httr-oauth
 .DS_Store
 .quarto
 # {shinytest2}: Ignore new debug snapshots for `$expect_values()`
 *_.new.png
-BiocCheck*s
+BiocCheck*
 inst/doc
