--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ importFrom(stats,setNames)
 importFrom(stringr,str_split_1)
 importFrom(tibble,num)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,unite)
 importFrom(utils,combn)
 importFrom(utils,de)
 importFrom(utils,globalVariables)
